# vector_search_mcp

./: pyproject.toml  requirements.txt  sample_cline_mcp_settings.json
src/vector_search_mcp/langchain/: embedding_data.py  langchain_client.py  langchain_doc_store.py  langchain_doc_store.py_  langchain_doc_store_postgres.py  langchain_util.py  langchain_vector_db.py  langchain_vector_db_chroma.py  langchain_vector_db_pgvector.py  vector_search_request.py
src/vector_search_mcp/mcp/: mcp_server.py
src/vector_search_mcp/model/: models.py
src/vector_search_mcp/util/: vector_db_client.py  vector_searcher.py
